v0.0.3/_sources/lcls-plc-qrix-vac_PLC_QRIX_VAC_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.140.43.1.1
      -
    * - Target IP address
      - 172.21.140.43
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _PLC_QRIX_VAC_pragmas:

Pragmas
-------

Total pragmas found: 111
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, 2.6.0
        LCLS Vacuum, SLAC - LCLS, Unset, 2.1.0
        LCLSVacuumSerialDriverLib, SLAC - LCLS, , 1.2.2
        PMPS, SLAC - LCLS, Unset, 2.2.2
        SysDir, System, , 3.5.8.0
        SysFile, System, , 3.5.9.0
        Tc2_DataExchange, Beckhoff Automation GmbH, , 3.3.5.0
        Tc2_EtherCAT, Beckhoff Automation GmbH, , 3.3.15.0
        Tc2_IoFunctions, Beckhoff Automation GmbH, , 3.3.13.0
        Tc2_Math, Beckhoff Automation GmbH, , 3.3.1.0
        Tc2_MC2, Beckhoff Automation GmbH, , 3.3.42.0
        Tc2_ModbusSrv, Beckhoff Automation GmbH, , 3.3.2.0
        Tc2_SerialCom, Beckhoff Automation GmbH, , 3.3.7.0
        Tc2_Standard, Beckhoff Automation GmbH, Unset, 3.3.3.0
        Tc2_System, Beckhoff Automation GmbH, Unset, 3.4.24.0
        Tc2_TcpIp, Beckhoff Automation GmbH, , 3.3.6.0
        Tc2_Utilities, Beckhoff Automation GmbH, , 3.3.41.0
        Tc3_EventLogger, Beckhoff Automation GmbH, , 3.1.24.0
        Tc3_Interfaces, Beckhoff Automation GmbH, , 3.4.3.0
        Tc3_JsonXml, Beckhoff Automation GmbH, , 3.3.14.0
        Tc3_Module, Beckhoff Automation GmbH, Unset, 3.3.21.0
        TcUnit, www.tcunit.org, , 1.1.0.0

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4388704 (32)


Constants
^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 1277894616 (8)
        Constants.bLittleEndian, BOOL, 1277894472 (8)
        Constants.bSimulationMode, BOOL, 1277894608 (8)
        Constants.CompilerVersion, VERSION, 1277894544 (64)
        Constants.CompilerVersionNumeric, DWORD, 1277894688 (32)
        Constants.gc_GaugeValidState, INT, 634575264 (16)
        Constants.gc_iSizeOfGGOArray, INT, 626222096 (16)
        Constants.nPackMode, UINT, 1277894640 (16)
        Constants.nRegisterSize, WORD, 1277894624 (16)
        Constants.RuntimeVersion, VERSION, 1277894480 (64)
        Constants.RuntimeVersionNumeric, DWORD, 1277894656 (32)

.. raw:: html

   </details>
   <br />


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096128 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (88)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4387840 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4387968 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4388000 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4388032 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>247 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4181120 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4181024 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4181056 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4180896 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4180992 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4180832 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4181088 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4180864 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4180928 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4180960 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4180704 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4180480 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4180608 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4180672 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4180576 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4180736 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4180768 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4180544 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4180512 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4180640 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4180416 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4180800 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4180384 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4180448 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4181152 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4181184 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4182240 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4182176 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4182272 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4182304 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4182336 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4182368 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4182208 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4180272 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4180208 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4180336 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4180048 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4180320 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4180080 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4180032 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4180160 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4180352 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4180176 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4180192 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4180288 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4180064 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4180256 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4180112 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4180144 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4180224 (16)
        Global_Variables.ADSSTATE_START, UINT, 4180096 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4180128 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4180304 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4180240 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4247936 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4247968 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4246672 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4179744 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4097168 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4179968 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4179984 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4179856 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4179776 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4179840 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4179872 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4179792 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4179808 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4179824 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4179888 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4179904 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4179920 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4179936 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4179952 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4179760 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4180016 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4180000 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 4388016 (16)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4182400 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4180376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097160 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4180368 (8)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 4389696 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4260896 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4260928 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4267200 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4267168 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4267136 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4267232 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4183072 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 1264797248 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4384400 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4184664 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4384408 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4384416 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 1264797184 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4248544 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4386568 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4386272 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4386144 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4246688 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4183056 (16)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 634576448 (128)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4248032 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4248016 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4248048 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4248064 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4248080 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4248384 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4248160 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4248480 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4248256 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4248448 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4248512 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4248096 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4248128 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4248320 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4248224 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4248352 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4248416 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4248288 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4248192 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4182496 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4182560 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4182528 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4182432 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4182592 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4182464 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4248896 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4248640 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4248000 (16)
        Global_Variables.g_DummyVG, ST_VG, 634575392 (1056)
        Global_Variables.g_iSizeOfGGOArray, INT, 634575280 (16)
        Global_Variables.g_stSystem, ST_System, 634575296 (88)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4184672 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4184656 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4184624 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4184640 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4247904 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4246336 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4246368 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 4389632 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 4389664 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4246240 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4246208 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4246176 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4184608 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4246400 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4246528 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4246552 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4246544 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4246664 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4183168 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 4389728 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4246656 (8)
        Global_Variables.nWatchdogTime, BYTE, 4182424 (8)
        Global_Variables.PI, LREAL, 4183104 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4246592 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4246624 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4246560 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4246432 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4181984 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4181344 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4181312 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4246464 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4246496 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4181408 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4181728 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4181696 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4247872 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4181568 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4181376 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4181664 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4181600 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4181440 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4181760 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4181632 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4181504 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4181536 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4181472 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4246272 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4246304 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4181792 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4181216 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4181248 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4181280 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4181856 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4181824 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4181888 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4181952 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4181920 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4182408 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4182416 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4255520 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4255872 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4255456 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4255808 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4255232 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4254384 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4254768 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4255392 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4255744 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4255264 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4255616 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4255328 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4255680 (64)
        Global_Variables.TaskInfo, PlcTaskSystemInfo, 634576576 (1024)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4183040 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4183024 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4182928 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4182864 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4182880 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4182896 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4182848 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4182912 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4182992 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4182944 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4182976 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4183008 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4182960 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 1264790208 (6976)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 4389024 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 4388768 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 4388736 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 4388960 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 4388992 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 4388832 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 4388864 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 4388896 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 4388800 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 4388928 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, T_HSOCKET, 4389280 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 4389152 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 4389120 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 4389056 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 4389216 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 4389248 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 4389088 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 4389184 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, T_ThrottleTimes, 4390176 (416)
        Global_Variables.THROTTLE_MODE_OFF, T_ThrottleTimes, 4389760 (416)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4182112 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4182016 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4182080 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4182048 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4182144 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4255936 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>15 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_DataExchange, ST_LibVersion, 1264797600 (288)
        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4178880 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4386976 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 1264797312 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 1264789920 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4387264 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4387552 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4179168 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4179456 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4184320 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4388288 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4390592 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4183712 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 634574976 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 1264789632 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4388224 (32)


GVL_Devices
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>159 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Devices.QRIX_ROUGH_VRO_01, FB_VVC, 1274264064 (640)
        GVL_Devices.QRIX_ROUGH_VRO_01.q_xOPN_DO, BOOL, 1274264672 (8)
        GVL_Devices.qRIXS_DET_PIP_01, FB_PIP_Gamma, 1276346368 (90240)
        GVL_Devices.qRIXS_DET_PIP_01.i_iPRESS, INT, 1276432688 (16)
        GVL_Devices.qRIXS_DET_PIP_01.i_xSP_DI, BOOL, 1276432704 (8)
        GVL_Devices.qRIXS_DET_PIP_01.q_xHVEna_DO, BOOL, 1276432672 (8)
        GVL_Devices.qRIXS_OPT_PIP_01, FB_PIP_Gamma, 1276256128 (90240)
        GVL_Devices.qRIXS_OPT_PIP_01.i_iPRESS, INT, 1276342448 (16)
        GVL_Devices.qRIXS_OPT_PIP_01.i_xSP_DI, BOOL, 1276342464 (8)
        GVL_Devices.qRIXS_OPT_PIP_01.q_xHVEna_DO, BOOL, 1276342432 (8)
        GVL_Devices.qRIXS_PRO_01, FB_EbaraDryPump, 1274093888 (83840)
        GVL_Devices.qRIXS_PRO_01.i_xAlarmOK, BOOL, 1274177704 (8)
        GVL_Devices.qRIXS_PRO_01.i_xBPStatus, BOOL, 1274177688 (8)
        GVL_Devices.qRIXS_PRO_01.i_xMPStatus, BOOL, 1274177680 (8)
        GVL_Devices.qRIXS_PRO_01.i_xRemote, BOOL, 1274177712 (8)
        GVL_Devices.qRIXS_PRO_01.i_xWarning, BOOL, 1274177696 (8)
        GVL_Devices.qRIXS_PRO_01.q_xBPStart, BOOL, 1274177672 (8)
        GVL_Devices.qRIXS_PRO_01.q_xMPStart, BOOL, 1274177664 (8)
        GVL_Devices.qRIXS_ROUGH_GPI_01, FB_MKS275, 1274177728 (86336)
        GVL_Devices.qRIXS_ROUGH_GPI_01.i_iPRESS_R, INT, 1274263808 (16)
        GVL_Devices.qRIXS_ROUGH_GPI_02, FB_MKS275, 1272715520 (86336)
        GVL_Devices.qRIXS_ROUGH_GPI_02.i_iPRESS_R, INT, 1272801600 (16)
        GVL_Devices.qRIXS_ROUGH_GPI_03, FB_MKS275, 1273493696 (86336)
        GVL_Devices.qRIXS_ROUGH_GPI_03.i_iPRESS_R, INT, 1273579776 (16)
        GVL_Devices.qRIXS_ROUGH_GPI_04, FB_MKS275, 1273580032 (86336)
        GVL_Devices.qRIXS_ROUGH_GPI_04.i_iPRESS_R, INT, 1273666112 (16)
        GVL_Devices.qRIXS_ROUGH_GPI_11, FB_MKS275, 1272801856 (86336)
        GVL_Devices.qRIXS_ROUGH_GPI_11.i_iPRESS_R, INT, 1272887936 (16)
        GVL_Devices.qRIXS_ROUGH_GPI_12, FB_MKS275, 1272888192 (86336)
        GVL_Devices.qRIXS_ROUGH_GPI_12.i_iPRESS_R, INT, 1272974272 (16)
        GVL_Devices.qRIXS_ROUGH_GPI_21, FB_MKS275, 1272974528 (86336)
        GVL_Devices.qRIXS_ROUGH_GPI_21.i_iPRESS_R, INT, 1273060608 (16)
        GVL_Devices.qRIXS_ROUGH_GPI_31, FB_MKS275, 1273235200 (86336)
        GVL_Devices.qRIXS_ROUGH_GPI_31.i_iPRESS_R, INT, 1273321280 (16)
        GVL_Devices.qRIXS_ROUGH_VRC_01, FB_VRC, 1273752704 (84544)
        GVL_Devices.qRIXS_ROUGH_VRC_01.i_xClsLS, BOOL, 1273837224 (8)
        GVL_Devices.qRIXS_ROUGH_VRC_01.i_xOpnLS, BOOL, 1273837216 (8)
        GVL_Devices.qRIXS_ROUGH_VRC_01.q_xOPN_DO, BOOL, 1273837232 (8)
        GVL_Devices.qRIXS_ROUGH_VRC_02, FB_VRC, 1273837248 (84544)
        GVL_Devices.qRIXS_ROUGH_VRC_02.i_xClsLS, BOOL, 1273921768 (8)
        GVL_Devices.qRIXS_ROUGH_VRC_02.i_xOpnLS, BOOL, 1273921760 (8)
        GVL_Devices.qRIXS_ROUGH_VRC_02.q_xOPN_DO, BOOL, 1273921776 (8)
        GVL_Devices.qRIXS_SA_VRC_01, FB_VRC_NO_FFO, 1273921792 (172096)
        GVL_Devices.qRIXS_SA_VRC_01.i_xClsLS, BOOL, 1274006312 (8)
        GVL_Devices.qRIXS_SA_VRC_01.i_xOpnLS, BOOL, 1274006304 (8)
        GVL_Devices.qRIXS_SA_VRC_01.q_xCLS_DO, BOOL, 1274006320 (8)
        GVL_Devices.qRIXS_SC_GCC_01, FB_MKS500, 1273060864 (88000)
        GVL_Devices.qRIXS_SC_GCC_01.i_iPRESS_R, INT, 1273148464 (16)
        GVL_Devices.qRIXS_SC_GCC_01.i_xDisc_Active, BOOL, 1273148496 (8)
        GVL_Devices.qRIXS_SC_GCC_01.i_xHV_ON, BOOL, 1273148488 (8)
        GVL_Devices.qRIXS_SC_GCC_01.q_xHV_DIS, BOOL, 1273148480 (8)
        GVL_Devices.qRIXS_SC_GPI_01, FB_MKS275, 1273148864 (86336)
        GVL_Devices.qRIXS_SC_GPI_01.i_iPRESS_R, INT, 1273234944 (16)
        GVL_Devices.qRIXS_SC_PIP_01, FB_PIP_Gamma, 1276075648 (90240)
        GVL_Devices.qRIXS_SC_PIP_01.i_iPRESS, INT, 1276161968 (16)
        GVL_Devices.qRIXS_SC_PIP_01.i_xSP_DI, BOOL, 1276161984 (8)
        GVL_Devices.qRIXS_SC_PIP_01.q_xHVEna_DO, BOOL, 1276161952 (8)
        GVL_Devices.qRIXS_SC_PIP_02, FB_PIP_Gamma, 1276165888 (90240)
        GVL_Devices.qRIXS_SC_PIP_02.i_iPRESS, INT, 1276252208 (16)
        GVL_Devices.qRIXS_SC_PIP_02.i_xSP_DI, BOOL, 1276252224 (8)
        GVL_Devices.qRIXS_SC_PIP_02.q_xHVEna_DO, BOOL, 1276252192 (8)
        GVL_Devices.qRIXS_SC_PTM_10, FB_PTM_Pfeiffer, 1275742592 (83264)
        GVL_Devices.qRIXS_SC_PTM_10.i_xAtSpd, BOOL, 1275825792 (8)
        GVL_Devices.qRIXS_SC_PTM_10.i_xFaultNC, BOOL, 1275825800 (8)
        GVL_Devices.qRIXS_SC_PTM_10.i_xRemote, BOOL, 1275825816 (8)
        GVL_Devices.qRIXS_SC_PTM_10.i_xWarn, BOOL, 1275825808 (8)
        GVL_Devices.qRIXS_SC_PTM_10.q_PumpingStation, BOOL, 1275825832 (8)
        GVL_Devices.qRIXS_SC_PTM_10.q_RunDO, BOOL, 1275825824 (8)
        GVL_Devices.qRIXS_SC_PTM_10.q_xRemote, BOOL, 1275825840 (8)
        GVL_Devices.qRIXS_SC_PTM_10.q_xReset, BOOL, 1275825848 (8)
        GVL_Devices.qRIXS_SC_PTM_20, FB_PTM_Pfeiffer, 1275825856 (83264)
        GVL_Devices.qRIXS_SC_PTM_20.i_xAtSpd, BOOL, 1275909056 (8)
        GVL_Devices.qRIXS_SC_PTM_20.i_xFaultNC, BOOL, 1275909064 (8)
        GVL_Devices.qRIXS_SC_PTM_20.i_xRemote, BOOL, 1275909080 (8)
        GVL_Devices.qRIXS_SC_PTM_20.i_xWarn, BOOL, 1275909072 (8)
        GVL_Devices.qRIXS_SC_PTM_20.q_PumpingStation, BOOL, 1275909096 (8)
        GVL_Devices.qRIXS_SC_PTM_20.q_RunDO, BOOL, 1275909088 (8)
        GVL_Devices.qRIXS_SC_PTM_20.q_xRemote, BOOL, 1275909104 (8)
        GVL_Devices.qRIXS_SC_PTM_20.q_xReset, BOOL, 1275909112 (8)
        GVL_Devices.qRIXS_SC_PTM_30, FB_PTM_Pfeiffer, 1275909120 (83264)
        GVL_Devices.qRIXS_SC_PTM_30.i_xAtSpd, BOOL, 1275992320 (8)
        GVL_Devices.qRIXS_SC_PTM_30.i_xFaultNC, BOOL, 1275992328 (8)
        GVL_Devices.qRIXS_SC_PTM_30.i_xRemote, BOOL, 1275992344 (8)
        GVL_Devices.qRIXS_SC_PTM_30.i_xWarn, BOOL, 1275992336 (8)
        GVL_Devices.qRIXS_SC_PTM_30.q_PumpingStation, BOOL, 1275992360 (8)
        GVL_Devices.qRIXS_SC_PTM_30.q_RunDO, BOOL, 1275992352 (8)
        GVL_Devices.qRIXS_SC_PTM_30.q_xRemote, BOOL, 1275992368 (8)
        GVL_Devices.qRIXS_SC_PTM_30.q_xReset, BOOL, 1275992376 (8)
        GVL_Devices.qRIXS_SC_VGC_01, FB_VGC, 1274602880 (176704)
        GVL_Devices.qRIXS_SC_VGC_01.i_xClsLS, BOOL, 1274779464 (8)
        GVL_Devices.qRIXS_SC_VGC_01.i_xOpnLS, BOOL, 1274779456 (8)
        GVL_Devices.qRIXS_SC_VGC_01.q_xOPN_DO, BOOL, 1274779472 (8)
        GVL_Devices.qRIXS_SC_VGC_02, FB_VGC, 1274779584 (176704)
        GVL_Devices.qRIXS_SC_VGC_02.i_xClsLS, BOOL, 1274956168 (8)
        GVL_Devices.qRIXS_SC_VGC_02.i_xOpnLS, BOOL, 1274956160 (8)
        GVL_Devices.qRIXS_SC_VGC_02.q_xOPN_DO, BOOL, 1274956176 (8)
        GVL_Devices.qRIXS_SC_VGC_03, FB_VGC, 1274956288 (176704)
        GVL_Devices.qRIXS_SC_VGC_03.i_xClsLS, BOOL, 1275132872 (8)
        GVL_Devices.qRIXS_SC_VGC_03.i_xOpnLS, BOOL, 1275132864 (8)
        GVL_Devices.qRIXS_SC_VGC_03.q_xOPN_DO, BOOL, 1275132880 (8)
        GVL_Devices.qRIXS_SC_VGC_04, FB_VGC, 1275132992 (176704)
        GVL_Devices.qRIXS_SC_VGC_04.i_xClsLS, BOOL, 1275309576 (8)
        GVL_Devices.qRIXS_SC_VGC_04.i_xOpnLS, BOOL, 1275309568 (8)
        GVL_Devices.qRIXS_SC_VGC_04.q_xOPN_DO, BOOL, 1275309584 (8)
        GVL_Devices.qRIXS_SC_VGC_05, FB_VGC, 1275309696 (176704)
        GVL_Devices.qRIXS_SC_VGC_05.i_xClsLS, BOOL, 1275486280 (8)
        GVL_Devices.qRIXS_SC_VGC_05.i_xOpnLS, BOOL, 1275486272 (8)
        GVL_Devices.qRIXS_SC_VGC_05.q_xOPN_DO, BOOL, 1275486288 (8)
        GVL_Devices.qRIXS_SC_VRC_01, FB_VRC, 1275573504 (84544)
        GVL_Devices.qRIXS_SC_VRC_01.i_xClsLS, BOOL, 1275658024 (8)
        GVL_Devices.qRIXS_SC_VRC_01.i_xOpnLS, BOOL, 1275658016 (8)
        GVL_Devices.qRIXS_SC_VRC_01.q_xOPN_DO, BOOL, 1275658032 (8)
        GVL_Devices.qRIXS_SC_VRC_10, FB_VRC, 1274264704 (84544)
        GVL_Devices.qRIXS_SC_VRC_10.i_xClsLS, BOOL, 1274349224 (8)
        GVL_Devices.qRIXS_SC_VRC_10.i_xOpnLS, BOOL, 1274349216 (8)
        GVL_Devices.qRIXS_SC_VRC_10.q_xOPN_DO, BOOL, 1274349232 (8)
        GVL_Devices.qRIXS_SC_VRC_20, FB_VRC, 1274349248 (84544)
        GVL_Devices.qRIXS_SC_VRC_20.i_xClsLS, BOOL, 1274433768 (8)
        GVL_Devices.qRIXS_SC_VRC_20.i_xOpnLS, BOOL, 1274433760 (8)
        GVL_Devices.qRIXS_SC_VRC_20.q_xOPN_DO, BOOL, 1274433776 (8)
        GVL_Devices.qRIXS_SC_VRC_30, FB_VRC, 1274433792 (84544)
        GVL_Devices.qRIXS_SC_VRC_30.i_xClsLS, BOOL, 1274518312 (8)
        GVL_Devices.qRIXS_SC_VRC_30.i_xOpnLS, BOOL, 1274518304 (8)
        GVL_Devices.qRIXS_SC_VRC_30.q_xOPN_DO, BOOL, 1274518320 (8)
        GVL_Devices.qRIXS_SC_VRC_31, FB_VRC, 1274518336 (84544)
        GVL_Devices.qRIXS_SC_VRC_31.i_xClsLS, BOOL, 1274602856 (8)
        GVL_Devices.qRIXS_SC_VRC_31.i_xOpnLS, BOOL, 1274602848 (8)
        GVL_Devices.qRIXS_SC_VRC_31.q_xOPN_DO, BOOL, 1274602864 (8)
        GVL_Devices.qRIXS_SC_VVC_01, FB_VVC, 1275486400 (640)
        GVL_Devices.qRIXS_SC_VVC_01.q_xOPN_DO, BOOL, 1275487008 (8)
        GVL_Devices.qRIXS_SC_VVC_02, FB_VVC, 1275487040 (640)
        GVL_Devices.qRIXS_SC_VVC_02.q_xOPN_DO, BOOL, 1275487648 (8)
        GVL_Devices.qRIXS_SDS_GPI_01, FB_MKS275, 1273666368 (86336)
        GVL_Devices.qRIXS_SDS_GPI_01.i_iPRESS_R, INT, 1273752448 (16)
        GVL_Devices.qRIXS_SDS_PTM_10, FB_PTM_Pfeiffer, 1275992384 (83264)
        GVL_Devices.qRIXS_SDS_PTM_10.i_xAtSpd, BOOL, 1276075584 (8)
        GVL_Devices.qRIXS_SDS_PTM_10.i_xFaultNC, BOOL, 1276075592 (8)
        GVL_Devices.qRIXS_SDS_PTM_10.i_xRemote, BOOL, 1276075608 (8)
        GVL_Devices.qRIXS_SDS_PTM_10.i_xWarn, BOOL, 1276075600 (8)
        GVL_Devices.qRIXS_SDS_PTM_10.q_PumpingStation, BOOL, 1276075624 (8)
        GVL_Devices.qRIXS_SDS_PTM_10.q_RunDO, BOOL, 1276075616 (8)
        GVL_Devices.qRIXS_SDS_PTM_10.q_xRemote, BOOL, 1276075632 (8)
        GVL_Devices.qRIXS_SDS_PTM_10.q_xReset, BOOL, 1276075640 (8)
        GVL_Devices.qRIXS_SDS_VRC_01, FB_VRC, 1275487680 (84544)
        GVL_Devices.qRIXS_SDS_VRC_01.i_xClsLS, BOOL, 1275572200 (8)
        GVL_Devices.qRIXS_SDS_VRC_01.i_xOpnLS, BOOL, 1275572192 (8)
        GVL_Devices.qRIXS_SDS_VRC_01.q_xOPN_DO, BOOL, 1275572208 (8)
        GVL_Devices.qRIXS_SDS_VRC_31, FB_VRC, 1275658048 (84544)
        GVL_Devices.qRIXS_SDS_VRC_31.i_xClsLS, BOOL, 1275742568 (8)
        GVL_Devices.qRIXS_SDS_VRC_31.i_xOpnLS, BOOL, 1275742560 (8)
        GVL_Devices.qRIXS_SDS_VRC_31.q_xOPN_DO, BOOL, 1275742576 (8)
        GVL_Devices.qRIXS_SDS_VVC_01, FB_VVC, 1275572224 (640)
        GVL_Devices.qRIXS_SDS_VVC_01.q_xOPN_DO, BOOL, 1275572832 (8)
        GVL_Devices.qRIXS_SDS_VVC_02, FB_VVC, 1275572864 (640)
        GVL_Devices.qRIXS_SDS_VVC_02.q_xOPN_DO, BOOL, 1275573472 (8)
        GVL_Devices.qRIXS_SSL_GCP_20, FB_972, 1273321536 (86080)
        GVL_Devices.qRIXS_SSL_GCP_20.i_iPRESS_R, INT, 1273407568 (16)
        GVL_Devices.qRIXS_SSL_GCP_30, FB_972, 1273407616 (86080)
        GVL_Devices.qRIXS_SSL_GCP_30.i_iPRESS_R, INT, 1273493648 (16)

.. raw:: html

   </details>
   <br />


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4388576 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096088 (8)
        GVL_Logger.cLogHost, STRING(15), 4096192 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (81600)
        GVL_Logger.iLogPort, UINT, 4096096 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4178816 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096416 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096112 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 4178848 (32)
        GVL_Logger.nTrickleTripTime, TIME, 4096448 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096480 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096320 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096512 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097184 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>17 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4393024 (16)
        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 634589328 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4386904 (8)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 634575384 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4390912 (16)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 634589296 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4390896 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 634589280 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4390880 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 634588944 (16)
        GVL_Param_TcUnit.TimeBetweenTestSuitesExecution, TIME, 634591424 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4390944 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 634589344 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4390928 (8)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 634589312 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4390976 (2048)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 634589376 (2048)

.. raw:: html

   </details>
   <br />


GVL_PfeifferParameters
^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PfeifferParameters.gcMaxPfeifferPumps, INT, 634577600 (16)


GVL_PMPS
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PMPS.fbArbiter, FB_Arbiter, 1276436608 (468032)
        GVL_PMPS.fbFastFaultOutput1, FB_HardwareFFOutput, 1276904640 (494912)
        GVL_PMPS.fbFastFaultOutput1.q_xFastFaultOut, BOOL, 1276904904 (8)
        GVL_PMPS.fbFastFaultOutput2, FB_HardwareFFOutput, 1277399552 (494912)
        GVL_PMPS.fbFastFaultOutput2.q_xFastFaultOut, BOOL, 1277399816 (8)


GVL_SA
^^^^^^

.. raw:: html

   <details>
       <summary>28 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_SA.qRIXS_DET_GCC_01, FB_MKS500, 1272627520 (88000)
        GVL_SA.qRIXS_DET_GCC_01.i_iPRESS_R, INT, 1272715120 (16)
        GVL_SA.qRIXS_DET_GCC_01.i_xDisc_Active, BOOL, 1272715152 (8)
        GVL_SA.qRIXS_DET_GCC_01.i_xHV_ON, BOOL, 1272715144 (8)
        GVL_SA.qRIXS_DET_GCC_01.q_xHV_DIS, BOOL, 1272715136 (8)
        GVL_SA.qRIXS_DET_GPI_01, FB_MKS275, 1272367104 (86336)
        GVL_SA.qRIXS_DET_GPI_01.i_iPRESS_R, INT, 1272453184 (16)
        GVL_SA.qRIXS_DET_VRC_01, FB_VRC, 1272196224 (84544)
        GVL_SA.qRIXS_DET_VRC_01.i_xClsLS, BOOL, 1272280744 (8)
        GVL_SA.qRIXS_DET_VRC_01.i_xOpnLS, BOOL, 1272280736 (8)
        GVL_SA.qRIXS_DET_VRC_01.q_xOPN_DO, BOOL, 1272280752 (8)
        GVL_SA.qRIXS_OPT_GCC_01, FB_MKS500, 1272539520 (88000)
        GVL_SA.qRIXS_OPT_GCC_01.i_iPRESS_R, INT, 1272627120 (16)
        GVL_SA.qRIXS_OPT_GCC_01.i_xDisc_Active, BOOL, 1272627152 (8)
        GVL_SA.qRIXS_OPT_GCC_01.i_xHV_ON, BOOL, 1272627144 (8)
        GVL_SA.qRIXS_OPT_GCC_01.q_xHV_DIS, BOOL, 1272627136 (8)
        GVL_SA.qRIXS_OPT_GPI_01, FB_MKS275, 1272280768 (86336)
        GVL_SA.qRIXS_OPT_GPI_01.i_iPRESS_R, INT, 1272366848 (16)
        GVL_SA.qRIXS_OPT_VGC_01, FB_VGC, 1271934976 (176704)
        GVL_SA.qRIXS_OPT_VGC_01.i_xClsLS, BOOL, 1272111560 (8)
        GVL_SA.qRIXS_OPT_VGC_01.i_xOpnLS, BOOL, 1272111552 (8)
        GVL_SA.qRIXS_OPT_VGC_01.q_xOPN_DO, BOOL, 1272111568 (8)
        GVL_SA.qRIXS_SA_GCP_01, FB_972, 1272453440 (86080)
        GVL_SA.qRIXS_SA_GCP_01.i_iPRESS_R, INT, 1272539472 (16)
        GVL_SA.qRIXS_SA_VWC_01, FB_VRC, 1272111680 (84544)
        GVL_SA.qRIXS_SA_VWC_01.i_xClsLS, BOOL, 1272196200 (8)
        GVL_SA.qRIXS_SA_VWC_01.i_xOpnLS, BOOL, 1272196192 (8)
        GVL_SA.qRIXS_SA_VWC_01.q_xOPN_DO, BOOL, 1272196208 (8)

.. raw:: html

   </details>
   <br />


GVL_TcUnit
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>19 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 626254112 (8320864)
        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 1256468768 (8320864)
        GVL_TcUnit.CurrentlyRunningOrderedTestInTestSuite, UINT, 1256452768 (16000)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4393040 (8)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 1256420736 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 626220032 (2048)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 1256418688 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 626220000 (32)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 1256418656 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 4393048 (8)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 1256420744 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 626222080 (16)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 1256420752 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4393056 (621826944)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 634591456 (621827200)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 626222112 (32000)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 1256420768 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4390936 (8)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 634589320 (8)

.. raw:: html

   </details>
   <br />


GVL_Variables
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Variables.SetupMode_Valve, BOOL, 1265999896 (8)
        GVL_Variables.xSystemOverrideMode, BOOL, 1265999880 (8)
        GVL_Variables.xSystemOverrideMode_Valve, BOOL, 1265999888 (8)


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 4096040 (48)


LCLS_Vacuum
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_Vacuum.Global_Variables.g_stSystem.I_EcatMaster1, AMSNETID, 634575336 (48)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4388256 (32)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>23 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 634577616 (16)
        PMPS_GVL.cnMaxStateArrayLen, INT, 634582320 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 634584096 (1696)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 634582400 (1696)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 634585824 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 634582080 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 634582208 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 634581024 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 634587904 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 634586880 (1024)
        PMPS_GVL.g_cBoundaries, INT, 634585808 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 634585792 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 634582112 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 634582304 (16)
        PMPS_GVL.PERange, PE_Ranges, 634582048 (32)
        PMPS_GVL.reVHyst, REAL, 634586848 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 634582336 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 634579328 (1696)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 634577632 (1696)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 634582272 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 634582144 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 634588960 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 634588928 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 634588992 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 634589024 (256)


PRG_2_PMPS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_2_PMPS.fbArbiterIO, FB_SubSysToArbiter_IO, 1266001600 (138176)
        PRG_2_PMPS.fbArbiterIO.i_stCurrentBP, ST_BeamParams_IO, 1266002400 (1696)
        PRG_2_PMPS.fbArbiterIO.q_stRequestedBP, ST_BeamParams_IO, 1266004096 (1696)
        PRG_2_PMPS.fbArbiterIO.xTxPDO_state, BIT, 1266005793 (1)
        PRG_2_PMPS.fbArbiterIO.xTxPDO_toggle, BIT, 1266005792 (1)


PRG_3_LOG
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_3_LOG.fbLogHandler, FB_LogHandler, 1266143296 (5788800)


PRG_SA_WINDOW
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SA_WINDOW.bExtPress, BOOL, 1264845288 (8)
        PRG_SA_WINDOW.fbFSInit, R_TRIG, 1265036832 (64)
        PRG_SA_WINDOW.g_FastFaultOutputNA, FB_HardwareFFOutput, 1265036928 (494912)
        PRG_SA_WINDOW.g_FastFaultOutputNA.q_xFastFaultOut, BOOL, 1265037192 (8)
        PRG_SA_WINDOW.g_fbArbiterNA, FB_Arbiter, 1265531840 (468032)
        PRG_SA_WINDOW.state, E_STATES, 1264845296 (16)
        PRG_SA_WINDOW.xExtILK_OK_BLW, INT, 1265036896 (16)
        PRG_SA_WINDOW.xFirstPass, BOOL, 1264845280 (8)


PRG_SampleChamber
^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SampleChamber.iWatchdog, UDINT, 1264845248 (32)
        PRG_SampleChamber.QRIX, STRING(255), 1264843200 (2048)
        PRG_SampleChamber.qRIXS_SC_PTM_10_ILK, FB_ChemRIXS_Turbo_ILK, 1265032320 (1504)
        PRG_SampleChamber.qRIXS_SC_PTM_20_ILK, FB_ChemRIXS_Turbo_ILK, 1265033824 (1504)
        PRG_SampleChamber.qRIXS_SC_PTM_30_ILK, FB_ChemRIXS_Turbo_ILK, 1265035328 (1504)
        PRG_SampleChamber.RIX_IM5K2_PPM_GCC_1, FB_TGCC_ADS, 1264938816 (93504)
        PRG_SampleChamber.RIX_TV4K2_GFS_1, FB_TGCC_ADS, 1264845312 (93504)


PRG_SPA
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SPA.iPressTorrerance, REAL, 1265999904 (32)
        PRG_SPA.stUSG_dummy, ST_VG, 1265999936 (1056)
        PRG_SPA.xExtILK_OK_BLW, BOOL, 1265036920 (8)
        PRG_SPA.xExtILK_OK_DET, BOOL, 1265999872 (8)
        PRG_SPA.xExtILK_OK_OPT, BOOL, 1265036912 (8)


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 1277950848 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 1277950336 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 1277950464 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 1277950592 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 1277950208 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 1277950720 (128)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 1277941184 (960)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 1277897856 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 1277894720 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 1277896768 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 1277897824 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 1277897792 (32)


