v0.0.6/_sources/lcls-plc-qrix-vac_PLC_QRIX_VAC_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.140.43.1.1
      -
    * - Target IP address
      - 172.21.140.43
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _PLC_QRIX_VAC_pragmas:

Pragmas
-------

Total pragmas found: 115
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, Unset
        LCLS Vacuum, SLAC - LCLS, Unset, 2.3.0
        LCLSVacuumSerialDriverLib, SLAC - LCLS, Unset, Unset
        PMPS, SLAC - LCLS, Unset, 2.1.0
        Tc2_SerialCom, Beckhoff Automation GmbH, Unset, Unset
        Tc2_Standard, Beckhoff Automation GmbH, Unset, Unset
        Tc2_System, Beckhoff Automation GmbH, Unset, Unset
        Tc3_Module, Beckhoff Automation GmbH, Unset, Unset

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4390464 (32)


Constants
^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 635961656 (8)
        Constants.bLittleEndian, BOOL, 635961640 (8)
        Constants.bSimulationMode, BOOL, 635961648 (8)
        Constants.CompilerVersion, VERSION, 648582144 (64)
        Constants.CompilerVersionNumeric, DWORD, 648582240 (32)
        Constants.gc_GaugeValidState, INT, 634593328 (16)
        Constants.gc_iSizeOfGGOArray, INT, 634593312 (16)
        Constants.nPackMode, UINT, 641749488 (16)
        Constants.nRegisterSize, WORD, 641749472 (16)
        Constants.RuntimeVersion, VERSION, 648582080 (64)
        Constants.RuntimeVersionNumeric, DWORD, 648582208 (32)

.. raw:: html

   </details>
   <br />


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096064 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (40)


GeneralConstants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GeneralConstants.MAX_STATES, UINT, 4096048 (16)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4389600 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4389728 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4389760 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4389792 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>279 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4181440 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4181344 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4181376 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4181216 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4181312 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4181152 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4181408 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4181184 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4181248 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4181280 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4181024 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4180800 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4180928 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4180992 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4180896 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4181056 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4181088 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4180864 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4180832 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4180960 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4180736 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4181120 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4180704 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4180768 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4181472 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4181504 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4182560 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4182496 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4182592 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4182624 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4182656 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4182688 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4182528 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4180592 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4180528 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4180656 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4180368 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4180640 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4180400 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4180352 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4180480 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4180672 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4180496 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4180512 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4180608 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4180384 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4180576 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4180432 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4180464 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4180544 (16)
        Global_Variables.ADSSTATE_START, UINT, 4180416 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4180448 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4180624 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4180560 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4248256 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4248288 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4246992 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4180064 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4097136 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4180288 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4180304 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4180176 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4180096 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4180160 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4180192 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4180112 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4180128 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4180144 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4180208 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4180224 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4180240 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4180256 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4180272 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4180080 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4180336 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4180320 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 4389776 (16)
        Global_Variables.ASCII_DLE, BYTE, 4389472 (8)
        Global_Variables.ASCII_ETX, BYTE, 4389464 (8)
        Global_Variables.ASCII_NAK, BYTE, 4389480 (8)
        Global_Variables.ASCII_STX, BYTE, 4387224 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4182720 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4180696 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097128 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096328 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4180688 (8)
        Global_Variables.COMERRORADS_INVALID_BAUDRATE, UDINT, 4388384 (32)
        Global_Variables.COMERRORADS_INVALID_CFGSTLEN, UDINT, 4388288 (32)
        Global_Variables.COMERRORADS_INVALID_CFGSTVER, UDINT, 4388320 (32)
        Global_Variables.COMERRORADS_INVALID_CMD, UDINT, 4388224 (32)
        Global_Variables.COMERRORADS_INVALID_COMPORT, UDINT, 4388192 (32)
        Global_Variables.COMERRORADS_INVALID_CTS_OUTCTRL, UDINT, 4388576 (32)
        Global_Variables.COMERRORADS_INVALID_DATABITS, UDINT, 4388448 (32)
        Global_Variables.COMERRORADS_INVALID_DATAPOINTER, UDINT, 4388256 (32)
        Global_Variables.COMERRORADS_INVALID_DSR_OUTCTRL, UDINT, 4388608 (32)
        Global_Variables.COMERRORADS_INVALID_DSR_SENS, UDINT, 4388640 (32)
        Global_Variables.COMERRORADS_INVALID_DTR_CTRL, UDINT, 4388512 (32)
        Global_Variables.COMERRORADS_INVALID_PARITY, UDINT, 4388416 (32)
        Global_Variables.COMERRORADS_INVALID_RTS_CTRL, UDINT, 4388544 (32)
        Global_Variables.COMERRORADS_INVALID_STOPBITS, UDINT, 4388480 (32)
        Global_Variables.COMERRORADS_INVALID_TL, UDINT, 4388352 (32)
        Global_Variables.COMERRORADS_NOT_INIT, UDINT, 4388672 (32)
        Global_Variables.COMERRORADS_PORT_CONNECTED, UDINT, 4388736 (32)
        Global_Variables.COMERRORADS_PORT_NOT_CONNECTED, UDINT, 4388768 (32)
        Global_Variables.COMERRORADS_RD_BUFFER_OVERRUN, UDINT, 4388704 (32)
        Global_Variables.COMERRORADS_RD_FAILURE, UDINT, 4388864 (32)
        Global_Variables.COMERRORADS_RD_THREAD_TIMEOUT, UDINT, 4388800 (32)
        Global_Variables.COMERRORADS_SERVER_INCOMPATIBLE, UDINT, 4388928 (32)
        Global_Variables.COMERRORADS_WR_FAILURE, UDINT, 4388896 (32)
        Global_Variables.COMERRORADS_WR_THREAD_TIMEOUT, UDINT, 4388832 (32)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 4391456 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4261216 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4261248 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4267520 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4267488 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4267456 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4267552 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4183392 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 634616256 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4384720 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4184984 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4384728 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4384736 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 634616192 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4248864 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4386888 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4386592 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4386464 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4247008 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4183376 (16)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 634594464 (128)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4248352 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4248336 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4248368 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4248384 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4248400 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4248704 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4248480 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4248800 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4248576 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4248768 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4248832 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4248416 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4248448 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4248640 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4248544 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4248672 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4248736 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4248608 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4248512 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4182816 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4182880 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4182848 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4182752 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4182912 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4182784 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4249216 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4248960 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4248320 (16)
        Global_Variables.g_DummyVG, ST_VG, 634593408 (1056)
        Global_Variables.g_iSizeOfGGOArray, INT, 634593344 (16)
        Global_Variables.g_stSystem, ST_System, 634593360 (40)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4184992 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4184976 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4184944 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4184960 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4248224 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4246656 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4246688 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 4391392 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 4391424 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4246560 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4246528 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4246496 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4184928 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4246720 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4246848 (16)
        Global_Variables.MAX_RETRIES, INT, 4389488 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4246872 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4246864 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4246984 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4183488 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 4391488 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4246976 (8)
        Global_Variables.nWatchdogTime, BYTE, 4182744 (8)
        Global_Variables.PI, LREAL, 4183424 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4246912 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4246944 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4246880 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4246752 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4182304 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4181664 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4181632 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4246784 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4246816 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4181728 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4182048 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4182016 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4248192 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4181888 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4181696 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4181984 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4181920 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4181760 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4182080 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4181952 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4181824 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4181856 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4181792 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4246592 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4246624 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4182112 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4181536 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4181568 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4181600 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4182176 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4182144 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4182208 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4182272 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4182240 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4182728 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4182736 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4255840 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4256192 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4255776 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4256128 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4255552 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4254704 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4255088 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4255712 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4256064 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4255584 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4255936 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4255648 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4256000 (64)
        Global_Variables.TaskInfo, PlcTaskSystemInfo, 634594624 (1024)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4183360 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4183344 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4183248 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4183184 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4183200 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4183216 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4183168 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4183232 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4183312 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4183264 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4183296 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4183328 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4183280 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 634609216 (6976)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 4390784 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 4390528 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 4390496 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 4390720 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 4390752 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 4390592 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 4390624 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 4390656 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 4390560 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 4390688 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, T_HSOCKET, 4391040 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 4390912 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 4390880 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 4390816 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 4390976 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 4391008 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 4390848 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 4390944 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, T_ThrottleTimes, 4391936 (416)
        Global_Variables.THROTTLE_MODE_OFF, T_ThrottleTimes, 4391520 (416)
        Global_Variables.TIMEOUT_QVZ, TIME, 4389536 (32)
        Global_Variables.TIMEOUT_WVZ, TIME, 4389568 (32)
        Global_Variables.TIMEOUT_ZVZ, TIME, 4389504 (32)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4182432 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4182336 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4182400 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4182368 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4182464 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4256256 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_DataExchange, ST_LibVersion, 634616608 (288)
        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4179200 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4387328 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 634616320 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 634608928 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4387616 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4387904 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4179488 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4179776 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4184640 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4390048 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4392352 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4184032 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 634593024 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4389984 (32)


GVL_COM
^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_COM.E14_fbSerialLineControl, SerialLineControl, 647731488 (10432)
        GVL_COM.E2_fbSerialLineControl, SerialLineControl, 647747328 (10432)
        GVL_COM.E2_SerialRXBuffer, ComBuffer, 647742304 (2512)
        GVL_COM.E2_SerialTXBuffer, ComBuffer, 647744816 (2512)
        GVL_COM.E2_stComIn, EL6inData22B, 647757760 (192)
        GVL_COM.E2_stComOut, EL6outData22B, 647757952 (192)
        GVL_COM.fb_PfeifferCom, FB_PFEIFFER_COM, 647784384 (797696)
        GVL_COM.SerialRXBuffer, ComBuffer, 647726464 (2512)
        GVL_COM.SerialTXBuffer, ComBuffer, 647728976 (2512)
        GVL_COM.st_Pfeiffer_CTRL, ST_PfeifferControl, 647758144 (3200)
        GVL_COM.st_Pfeiffer_RBK, ST_PfeifferStatus, 647761344 (23040)
        GVL_COM.stComIn, EL6inData22B, 647741920 (192)
        GVL_COM.stComOut, EL6outData22B, 647742112 (192)

.. raw:: html

   </details>
   <br />


GVL_Devices
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>159 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Devices.QRIX_ROUGH_VRO_01, FB_VVC, 643304576 (640)
        GVL_Devices.QRIX_ROUGH_VRO_01.q_xOPN_DO, BOOL, 643305184 (8)
        GVL_Devices.qRIXS_DET_PIP_01, FB_PIP_Gamma, 645394176 (90624)
        GVL_Devices.qRIXS_DET_PIP_01.i_iPRESS, INT, 645480880 (16)
        GVL_Devices.qRIXS_DET_PIP_01.i_xSP_DI, BOOL, 645480896 (8)
        GVL_Devices.qRIXS_DET_PIP_01.q_xHVEna_DO, BOOL, 645480864 (8)
        GVL_Devices.qRIXS_OPT_PIP_01, FB_PIP_Gamma, 645303552 (90624)
        GVL_Devices.qRIXS_OPT_PIP_01.i_iPRESS, INT, 645390256 (16)
        GVL_Devices.qRIXS_OPT_PIP_01.i_xSP_DI, BOOL, 645390272 (8)
        GVL_Devices.qRIXS_OPT_PIP_01.q_xHVEna_DO, BOOL, 645390240 (8)
        GVL_Devices.qRIXS_PRO_01, FB_EbaraDryPump, 643133632 (84224)
        GVL_Devices.qRIXS_PRO_01.i_xAlarmOK, BOOL, 643217832 (8)
        GVL_Devices.qRIXS_PRO_01.i_xBPStatus, BOOL, 643217816 (8)
        GVL_Devices.qRIXS_PRO_01.i_xMPStatus, BOOL, 643217808 (8)
        GVL_Devices.qRIXS_PRO_01.i_xRemote, BOOL, 643217840 (8)
        GVL_Devices.qRIXS_PRO_01.i_xWarning, BOOL, 643217824 (8)
        GVL_Devices.qRIXS_PRO_01.q_xBPStart, BOOL, 643217800 (8)
        GVL_Devices.qRIXS_PRO_01.q_xMPStart, BOOL, 643217792 (8)
        GVL_Devices.qRIXS_ROUGH_GPI_01, FB_MKS275, 643217856 (86720)
        GVL_Devices.qRIXS_ROUGH_GPI_01.i_iPRESS_R, INT, 643304320 (16)
        GVL_Devices.qRIXS_ROUGH_GPI_02, FB_MKS275, 641749504 (86720)
        GVL_Devices.qRIXS_ROUGH_GPI_02.i_iPRESS_R, INT, 641835968 (16)
        GVL_Devices.qRIXS_ROUGH_GPI_03, FB_MKS275, 642531136 (86720)
        GVL_Devices.qRIXS_ROUGH_GPI_03.i_iPRESS_R, INT, 642617600 (16)
        GVL_Devices.qRIXS_ROUGH_GPI_04, FB_MKS275, 642617856 (86720)
        GVL_Devices.qRIXS_ROUGH_GPI_04.i_iPRESS_R, INT, 642704320 (16)
        GVL_Devices.qRIXS_ROUGH_GPI_11, FB_MKS275, 641836224 (86720)
        GVL_Devices.qRIXS_ROUGH_GPI_11.i_iPRESS_R, INT, 641922688 (16)
        GVL_Devices.qRIXS_ROUGH_GPI_12, FB_MKS275, 641922944 (86720)
        GVL_Devices.qRIXS_ROUGH_GPI_12.i_iPRESS_R, INT, 642009408 (16)
        GVL_Devices.qRIXS_ROUGH_GPI_21, FB_MKS275, 642009664 (86720)
        GVL_Devices.qRIXS_ROUGH_GPI_21.i_iPRESS_R, INT, 642096128 (16)
        GVL_Devices.qRIXS_ROUGH_GPI_31, FB_MKS275, 642271488 (86720)
        GVL_Devices.qRIXS_ROUGH_GPI_31.i_iPRESS_R, INT, 642357952 (16)
        GVL_Devices.qRIXS_ROUGH_VRC_01, FB_VRC, 642791296 (84928)
        GVL_Devices.qRIXS_ROUGH_VRC_01.i_xClsLS, BOOL, 642876200 (8)
        GVL_Devices.qRIXS_ROUGH_VRC_01.i_xOpnLS, BOOL, 642876192 (8)
        GVL_Devices.qRIXS_ROUGH_VRC_01.q_xOPN_DO, BOOL, 642876208 (8)
        GVL_Devices.qRIXS_ROUGH_VRC_02, FB_VRC, 642876224 (84928)
        GVL_Devices.qRIXS_ROUGH_VRC_02.i_xClsLS, BOOL, 642961128 (8)
        GVL_Devices.qRIXS_ROUGH_VRC_02.i_xOpnLS, BOOL, 642961120 (8)
        GVL_Devices.qRIXS_ROUGH_VRC_02.q_xOPN_DO, BOOL, 642961136 (8)
        GVL_Devices.qRIXS_SA_VRC_01, FB_VRC_NO_FFO, 642961152 (172480)
        GVL_Devices.qRIXS_SA_VRC_01.i_xClsLS, BOOL, 643046056 (8)
        GVL_Devices.qRIXS_SA_VRC_01.i_xOpnLS, BOOL, 643046048 (8)
        GVL_Devices.qRIXS_SA_VRC_01.q_xCLS_DO, BOOL, 643046064 (8)
        GVL_Devices.qRIXS_SC_GCC_01, FB_MKS500, 642096384 (88384)
        GVL_Devices.qRIXS_SC_GCC_01.i_iPRESS_R, INT, 642184368 (16)
        GVL_Devices.qRIXS_SC_GCC_01.i_xDisc_Active, BOOL, 642184400 (8)
        GVL_Devices.qRIXS_SC_GCC_01.i_xHV_ON, BOOL, 642184392 (8)
        GVL_Devices.qRIXS_SC_GCC_01.q_xHV_DIS, BOOL, 642184384 (8)
        GVL_Devices.qRIXS_SC_GPI_01, FB_MKS275, 642184768 (86720)
        GVL_Devices.qRIXS_SC_GPI_01.i_iPRESS_R, INT, 642271232 (16)
        GVL_Devices.qRIXS_SC_PIP_01, FB_PIP_Gamma, 645122304 (90624)
        GVL_Devices.qRIXS_SC_PIP_01.i_iPRESS, INT, 645209008 (16)
        GVL_Devices.qRIXS_SC_PIP_01.i_xSP_DI, BOOL, 645209024 (8)
        GVL_Devices.qRIXS_SC_PIP_01.q_xHVEna_DO, BOOL, 645208992 (8)
        GVL_Devices.qRIXS_SC_PIP_02, FB_PIP_Gamma, 645212928 (90624)
        GVL_Devices.qRIXS_SC_PIP_02.i_iPRESS, INT, 645299632 (16)
        GVL_Devices.qRIXS_SC_PIP_02.i_xSP_DI, BOOL, 645299648 (8)
        GVL_Devices.qRIXS_SC_PIP_02.q_xHVEna_DO, BOOL, 645299616 (8)
        GVL_Devices.qRIXS_SC_PTM_10, FB_PTM_Pfeiffer, 644787712 (83648)
        GVL_Devices.qRIXS_SC_PTM_10.i_xAtSpd, BOOL, 644871296 (8)
        GVL_Devices.qRIXS_SC_PTM_10.i_xFaultNC, BOOL, 644871304 (8)
        GVL_Devices.qRIXS_SC_PTM_10.i_xRemote, BOOL, 644871320 (8)
        GVL_Devices.qRIXS_SC_PTM_10.i_xWarn, BOOL, 644871312 (8)
        GVL_Devices.qRIXS_SC_PTM_10.q_PumpingStation, BOOL, 644871336 (8)
        GVL_Devices.qRIXS_SC_PTM_10.q_RunDO, BOOL, 644871328 (8)
        GVL_Devices.qRIXS_SC_PTM_10.q_xRemote, BOOL, 644871344 (8)
        GVL_Devices.qRIXS_SC_PTM_10.q_xReset, BOOL, 644871352 (8)
        GVL_Devices.qRIXS_SC_PTM_20, FB_PTM_Pfeiffer, 644871360 (83648)
        GVL_Devices.qRIXS_SC_PTM_20.i_xAtSpd, BOOL, 644954944 (8)
        GVL_Devices.qRIXS_SC_PTM_20.i_xFaultNC, BOOL, 644954952 (8)
        GVL_Devices.qRIXS_SC_PTM_20.i_xRemote, BOOL, 644954968 (8)
        GVL_Devices.qRIXS_SC_PTM_20.i_xWarn, BOOL, 644954960 (8)
        GVL_Devices.qRIXS_SC_PTM_20.q_PumpingStation, BOOL, 644954984 (8)
        GVL_Devices.qRIXS_SC_PTM_20.q_RunDO, BOOL, 644954976 (8)
        GVL_Devices.qRIXS_SC_PTM_20.q_xRemote, BOOL, 644954992 (8)
        GVL_Devices.qRIXS_SC_PTM_20.q_xReset, BOOL, 644955000 (8)
        GVL_Devices.qRIXS_SC_PTM_30, FB_PTM_Pfeiffer, 644955008 (83648)
        GVL_Devices.qRIXS_SC_PTM_30.i_xAtSpd, BOOL, 645038592 (8)
        GVL_Devices.qRIXS_SC_PTM_30.i_xFaultNC, BOOL, 645038600 (8)
        GVL_Devices.qRIXS_SC_PTM_30.i_xRemote, BOOL, 645038616 (8)
        GVL_Devices.qRIXS_SC_PTM_30.i_xWarn, BOOL, 645038608 (8)
        GVL_Devices.qRIXS_SC_PTM_30.q_PumpingStation, BOOL, 645038632 (8)
        GVL_Devices.qRIXS_SC_PTM_30.q_RunDO, BOOL, 645038624 (8)
        GVL_Devices.qRIXS_SC_PTM_30.q_xRemote, BOOL, 645038640 (8)
        GVL_Devices.qRIXS_SC_PTM_30.q_xReset, BOOL, 645038648 (8)
        GVL_Devices.qRIXS_SC_VGC_01, FB_VGC, 643644928 (177088)
        GVL_Devices.qRIXS_SC_VGC_01.i_xClsLS, BOOL, 643821896 (8)
        GVL_Devices.qRIXS_SC_VGC_01.i_xOpnLS, BOOL, 643821888 (8)
        GVL_Devices.qRIXS_SC_VGC_01.q_xOPN_DO, BOOL, 643821904 (8)
        GVL_Devices.qRIXS_SC_VGC_02, FB_VGC, 643822016 (177088)
        GVL_Devices.qRIXS_SC_VGC_02.i_xClsLS, BOOL, 643998984 (8)
        GVL_Devices.qRIXS_SC_VGC_02.i_xOpnLS, BOOL, 643998976 (8)
        GVL_Devices.qRIXS_SC_VGC_02.q_xOPN_DO, BOOL, 643998992 (8)
        GVL_Devices.qRIXS_SC_VGC_03, FB_VGC, 643999104 (177088)
        GVL_Devices.qRIXS_SC_VGC_03.i_xClsLS, BOOL, 644176072 (8)
        GVL_Devices.qRIXS_SC_VGC_03.i_xOpnLS, BOOL, 644176064 (8)
        GVL_Devices.qRIXS_SC_VGC_03.q_xOPN_DO, BOOL, 644176080 (8)
        GVL_Devices.qRIXS_SC_VGC_04, FB_VGC, 644176192 (177088)
        GVL_Devices.qRIXS_SC_VGC_04.i_xClsLS, BOOL, 644353160 (8)
        GVL_Devices.qRIXS_SC_VGC_04.i_xOpnLS, BOOL, 644353152 (8)
        GVL_Devices.qRIXS_SC_VGC_04.q_xOPN_DO, BOOL, 644353168 (8)
        GVL_Devices.qRIXS_SC_VGC_05, FB_VGC, 644353280 (177088)
        GVL_Devices.qRIXS_SC_VGC_05.i_xClsLS, BOOL, 644530248 (8)
        GVL_Devices.qRIXS_SC_VGC_05.i_xOpnLS, BOOL, 644530240 (8)
        GVL_Devices.qRIXS_SC_VGC_05.q_xOPN_DO, BOOL, 644530256 (8)
        GVL_Devices.qRIXS_SC_VRC_01, FB_VRC, 644617856 (84928)
        GVL_Devices.qRIXS_SC_VRC_01.i_xClsLS, BOOL, 644702760 (8)
        GVL_Devices.qRIXS_SC_VRC_01.i_xOpnLS, BOOL, 644702752 (8)
        GVL_Devices.qRIXS_SC_VRC_01.q_xOPN_DO, BOOL, 644702768 (8)
        GVL_Devices.qRIXS_SC_VRC_10, FB_VRC, 643305216 (84928)
        GVL_Devices.qRIXS_SC_VRC_10.i_xClsLS, BOOL, 643390120 (8)
        GVL_Devices.qRIXS_SC_VRC_10.i_xOpnLS, BOOL, 643390112 (8)
        GVL_Devices.qRIXS_SC_VRC_10.q_xOPN_DO, BOOL, 643390128 (8)
        GVL_Devices.qRIXS_SC_VRC_20, FB_VRC, 643390144 (84928)
        GVL_Devices.qRIXS_SC_VRC_20.i_xClsLS, BOOL, 643475048 (8)
        GVL_Devices.qRIXS_SC_VRC_20.i_xOpnLS, BOOL, 643475040 (8)
        GVL_Devices.qRIXS_SC_VRC_20.q_xOPN_DO, BOOL, 643475056 (8)
        GVL_Devices.qRIXS_SC_VRC_30, FB_VRC, 643475072 (84928)
        GVL_Devices.qRIXS_SC_VRC_30.i_xClsLS, BOOL, 643559976 (8)
        GVL_Devices.qRIXS_SC_VRC_30.i_xOpnLS, BOOL, 643559968 (8)
        GVL_Devices.qRIXS_SC_VRC_30.q_xOPN_DO, BOOL, 643559984 (8)
        GVL_Devices.qRIXS_SC_VRC_31, FB_VRC, 643560000 (84928)
        GVL_Devices.qRIXS_SC_VRC_31.i_xClsLS, BOOL, 643644904 (8)
        GVL_Devices.qRIXS_SC_VRC_31.i_xOpnLS, BOOL, 643644896 (8)
        GVL_Devices.qRIXS_SC_VRC_31.q_xOPN_DO, BOOL, 643644912 (8)
        GVL_Devices.qRIXS_SC_VVC_01, FB_VVC, 644530368 (640)
        GVL_Devices.qRIXS_SC_VVC_01.q_xOPN_DO, BOOL, 644530976 (8)
        GVL_Devices.qRIXS_SC_VVC_02, FB_VVC, 644531008 (640)
        GVL_Devices.qRIXS_SC_VVC_02.q_xOPN_DO, BOOL, 644531616 (8)
        GVL_Devices.qRIXS_SDS_GPI_01, FB_MKS275, 642704576 (86720)
        GVL_Devices.qRIXS_SDS_GPI_01.i_iPRESS_R, INT, 642791040 (16)
        GVL_Devices.qRIXS_SDS_PTM_10, FB_PTM_Pfeiffer, 645038656 (83648)
        GVL_Devices.qRIXS_SDS_PTM_10.i_xAtSpd, BOOL, 645122240 (8)
        GVL_Devices.qRIXS_SDS_PTM_10.i_xFaultNC, BOOL, 645122248 (8)
        GVL_Devices.qRIXS_SDS_PTM_10.i_xRemote, BOOL, 645122264 (8)
        GVL_Devices.qRIXS_SDS_PTM_10.i_xWarn, BOOL, 645122256 (8)
        GVL_Devices.qRIXS_SDS_PTM_10.q_PumpingStation, BOOL, 645122280 (8)
        GVL_Devices.qRIXS_SDS_PTM_10.q_RunDO, BOOL, 645122272 (8)
        GVL_Devices.qRIXS_SDS_PTM_10.q_xRemote, BOOL, 645122288 (8)
        GVL_Devices.qRIXS_SDS_PTM_10.q_xReset, BOOL, 645122296 (8)
        GVL_Devices.qRIXS_SDS_VRC_01, FB_VRC, 644531648 (84928)
        GVL_Devices.qRIXS_SDS_VRC_01.i_xClsLS, BOOL, 644616552 (8)
        GVL_Devices.qRIXS_SDS_VRC_01.i_xOpnLS, BOOL, 644616544 (8)
        GVL_Devices.qRIXS_SDS_VRC_01.q_xOPN_DO, BOOL, 644616560 (8)
        GVL_Devices.qRIXS_SDS_VRC_31, FB_VRC, 644702784 (84928)
        GVL_Devices.qRIXS_SDS_VRC_31.i_xClsLS, BOOL, 644787688 (8)
        GVL_Devices.qRIXS_SDS_VRC_31.i_xOpnLS, BOOL, 644787680 (8)
        GVL_Devices.qRIXS_SDS_VRC_31.q_xOPN_DO, BOOL, 644787696 (8)
        GVL_Devices.qRIXS_SDS_VVC_01, FB_VVC, 644616576 (640)
        GVL_Devices.qRIXS_SDS_VVC_01.q_xOPN_DO, BOOL, 644617184 (8)
        GVL_Devices.qRIXS_SDS_VVC_02, FB_VVC, 644617216 (640)
        GVL_Devices.qRIXS_SDS_VVC_02.q_xOPN_DO, BOOL, 644617824 (8)
        GVL_Devices.qRIXS_SSL_GCP_20, FB_972, 642358208 (86464)
        GVL_Devices.qRIXS_SSL_GCP_20.i_iPRESS_R, INT, 642444624 (16)
        GVL_Devices.qRIXS_SSL_GCP_30, FB_972, 642444672 (86464)
        GVL_Devices.qRIXS_SSL_GCP_30.i_iPRESS_R, INT, 642531088 (16)

.. raw:: html

   </details>
   <br />


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4390336 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096040 (8)
        GVL_Logger.cLogHost, STRING(15), 4096128 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (81984)
        GVL_Logger.iLogPort, UINT, 4096256 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4097184 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096352 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096336 (16)
        GVL_Logger.nTrickleTripTime, TIME, 4096416 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096448 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096272 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096480 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097152 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4394784 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4392688 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4392672 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4392656 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4392640 (16)
        GVL_Param_TcUnit.TimeBetweenTestSuitesExecution, TIME, 4394816 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4392704 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4392696 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4392736 (2048)


GVL_PfeifferParameters
^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PfeifferParameters.gcMaxPfeifferPumps, INT, 634594592 (16)


GVL_PMPS
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PMPS.fbArbiter, FB_Arbiter, 645484800 (467456)
        GVL_PMPS.fbFastFaultOutput1, FB_HardwareFFOutput, 645952256 (495296)
        GVL_PMPS.fbFastFaultOutput1.q_xFastFaultOut, BOOL, 645952520 (8)
        GVL_PMPS.fbFastFaultOutput2, FB_HardwareFFOutput, 646447552 (495296)
        GVL_PMPS.fbFastFaultOutput2.q_xFastFaultOut, BOOL, 646447816 (8)


GVL_SA
^^^^^^

.. raw:: html

   <details>
       <summary>28 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_SA.qRIXS_DET_GCC_01, FB_MKS500, 647638080 (88384)
        GVL_SA.qRIXS_DET_GCC_01.i_iPRESS_R, INT, 647726064 (16)
        GVL_SA.qRIXS_DET_GCC_01.i_xDisc_Active, BOOL, 647726096 (8)
        GVL_SA.qRIXS_DET_GCC_01.i_xHV_ON, BOOL, 647726088 (8)
        GVL_SA.qRIXS_DET_GCC_01.q_xHV_DIS, BOOL, 647726080 (8)
        GVL_SA.qRIXS_DET_GPI_01, FB_MKS275, 647376512 (86720)
        GVL_SA.qRIXS_DET_GPI_01.i_iPRESS_R, INT, 647462976 (16)
        GVL_SA.qRIXS_DET_VRC_01, FB_VRC, 647204864 (84928)
        GVL_SA.qRIXS_DET_VRC_01.i_xClsLS, BOOL, 647289768 (8)
        GVL_SA.qRIXS_DET_VRC_01.i_xOpnLS, BOOL, 647289760 (8)
        GVL_SA.qRIXS_DET_VRC_01.q_xOPN_DO, BOOL, 647289776 (8)
        GVL_SA.qRIXS_OPT_GCC_01, FB_MKS500, 647549696 (88384)
        GVL_SA.qRIXS_OPT_GCC_01.i_iPRESS_R, INT, 647637680 (16)
        GVL_SA.qRIXS_OPT_GCC_01.i_xDisc_Active, BOOL, 647637712 (8)
        GVL_SA.qRIXS_OPT_GCC_01.i_xHV_ON, BOOL, 647637704 (8)
        GVL_SA.qRIXS_OPT_GCC_01.q_xHV_DIS, BOOL, 647637696 (8)
        GVL_SA.qRIXS_OPT_GPI_01, FB_MKS275, 647289792 (86720)
        GVL_SA.qRIXS_OPT_GPI_01.i_iPRESS_R, INT, 647376256 (16)
        GVL_SA.qRIXS_OPT_VGC_01, FB_VGC, 646942848 (177088)
        GVL_SA.qRIXS_OPT_VGC_01.i_xClsLS, BOOL, 647119816 (8)
        GVL_SA.qRIXS_OPT_VGC_01.i_xOpnLS, BOOL, 647119808 (8)
        GVL_SA.qRIXS_OPT_VGC_01.q_xOPN_DO, BOOL, 647119824 (8)
        GVL_SA.qRIXS_SA_GCP_01, FB_972, 647463232 (86464)
        GVL_SA.qRIXS_SA_GCP_01.i_iPRESS_R, INT, 647549648 (16)
        GVL_SA.qRIXS_SA_VWC_01, FB_VRC, 647119936 (84928)
        GVL_SA.qRIXS_SA_VWC_01.i_xClsLS, BOOL, 647204840 (8)
        GVL_SA.qRIXS_SA_VWC_01.i_xOpnLS, BOOL, 647204832 (8)
        GVL_SA.qRIXS_SA_VWC_01.q_xOPN_DO, BOOL, 647204848 (8)

.. raw:: html

   </details>
   <br />


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 626272160 (8320864)
        GVL_TcUnit.CurrentlyRunningOrderedTestInTestSuite, UINT, 626256160 (16000)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4394808 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 626222080 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 626222048 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 626224128 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 626224144 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4394848 (621827200)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 626224160 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4394800 (8)


GVL_Variables
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Variables.SetupMode_Valve, BOOL, 635817752 (8)
        GVL_Variables.xSystemOverrideMode, BOOL, 635817736 (8)
        GVL_Variables.xSystemOverrideMode_Valve, BOOL, 635817744 (8)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4390016 (32)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>23 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 634605424 (16)
        PMPS_GVL.cnMaxStateArrayLen, INT, 634605408 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 634602016 (1696)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 634600320 (1696)
        PMPS_GVL.cstSafeBeam, ST_BeamParams, 634603712 (1696)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 634605472 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 634600096 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 634600192 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 634599040 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 634607552 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 634606528 (1024)
        PMPS_GVL.g_cBoundaries, INT, 634605456 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 634605440 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 634600256 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 634594608 (16)
        PMPS_GVL.PERange, PE_Ranges, 634600064 (32)
        PMPS_GVL.reVHyst, REAL, 634606496 (32)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 634597344 (1696)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 634595648 (1696)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 634600288 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 634600128 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 634608608 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 634608576 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 634608640 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 634608672 (256)


PRG_2_PMPS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_2_PMPS.fbArbiterIO, FB_SubSysToArbiter_IO, 635819456 (138560)
        PRG_2_PMPS.fbArbiterIO.i_stCurrentBP, ST_BeamParams_IO, 635820256 (1696)
        PRG_2_PMPS.fbArbiterIO.q_stRequestedBP, ST_BeamParams_IO, 635821952 (1696)
        PRG_2_PMPS.fbArbiterIO.xTxPDO_state, BIT, 635823649 (1)
        PRG_2_PMPS.fbArbiterIO.xTxPDO_toggle, BIT, 635823648 (1)


PRG_3_LOG
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_3_LOG.fbLogHandler, FB_LogHandler, 635961664 (5784896)


PRG_SA_WINDOW
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SA_WINDOW.bExtPress, BOOL, 634593400 (8)
        PRG_SA_WINDOW.fbFSInit, R_TRIG, 634854880 (64)
        PRG_SA_WINDOW.g_FastFaultOutputNA, FB_HardwareFFOutput, 634854976 (495296)
        PRG_SA_WINDOW.g_FastFaultOutputNA.q_xFastFaultOut, BOOL, 634855240 (8)
        PRG_SA_WINDOW.g_fbArbiterNA, FB_Arbiter, 635350272 (467456)
        PRG_SA_WINDOW.state, E_STATES, 634608592 (16)
        PRG_SA_WINDOW.xExtILK_OK_BLW, INT, 634854944 (16)
        PRG_SA_WINDOW.xFirstPass, BOOL, 626224136 (8)


PRG_SampleChamber
^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SampleChamber.iWatchdog, UDINT, 634662560 (32)
        PRG_SampleChamber.QRIX, STRING(255), 634660512 (2048)
        PRG_SampleChamber.qRIXS_SC_PTM_10_ILK, FB_ChemRIXS_Turbo_ILK, 634850368 (1504)
        PRG_SampleChamber.qRIXS_SC_PTM_20_ILK, FB_ChemRIXS_Turbo_ILK, 634851872 (1504)
        PRG_SampleChamber.qRIXS_SC_PTM_30_ILK, FB_ChemRIXS_Turbo_ILK, 634853376 (1504)
        PRG_SampleChamber.RIX_IM5K2_PPM_GCC_1, FB_TGCC_ADS, 634756480 (93888)
        PRG_SampleChamber.RIX_TV4K2_GFS_1, FB_TGCC_ADS, 634662592 (93888)


PRG_SPA
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SPA.iPressTorrerance, REAL, 635817760 (32)
        PRG_SPA.stUSG_dummy, ST_VG, 635817792 (1056)
        PRG_SPA.xExtILK_OK_BLW, BOOL, 634854968 (8)
        PRG_SPA.xExtILK_OK_DET, BOOL, 635817728 (8)
        PRG_SPA.xExtILK_OK_OPT, BOOL, 634854960 (8)


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 648605056 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 648604544 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 648604672 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 648604800 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 648604416 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 648604928 (128)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 648635520 (960)


TwinCAT_LicenseInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_LicenseInfoVarList._LicenseInfo, PlcLicenseInfo, 648582272 (1024)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__CommTask, _Implicit_Task_Info, 648588224 (704)
        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 648587520 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 648583296 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 648585344 (2048)
        TwinCAT_SystemInfoVarList._TaskOid_CommTask, OTCID, 648587488 (32)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 648587424 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_CommTask, OTCID, 648587456 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 648587392 (32)


